learning and learning

--- a/internal/server/test.templ
+++ b/internal/server/test.templ
@@ -1,5 +1,6 @@
 package server
 
 templ Test(name string) {
-	<div>Hello { Name }</div>
+	<div style="">Hello { name }</div>
+    <a href="/web">Chat Bot!</a>
 }
