--- a/cmd/web/test.templ
+++ b/cmd/web/test.templ
@@ -1,6 +1,6 @@
-package server
+package web
 
 templ Test(name string) {
 	<div style="">Hello { name }</div>
-    <a href="/web">Chat Bot!</a>
+  
 }
